# rusty-coreutils

./: Cargo.toml  README.md
src/cat/: main.rs
src/dd/: args.rs  main.rs
src/echo/: main.rs
src/false/: main.rs
src/head/: main.rs
src/ls/: main.rs
src/mkdir/: main.rs
src/printenv/: main.rs
src/pwd/: main.rs
src/tail/: main.rs
src/true/: main.rs
src/whoami/: main.rs
src/yes/: main.rs
