[package]
name = "rusty-coreutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.9", features = ["derive"] }

[[bin]]
name = "ls"
path = "src/ls/main.rs"

[[bin]]
name = "pwd"
path = "src/pwd/main.rs"
