[package]
name = "rusty-coreutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.9", features = ["derive"] }
unix_mode = "0.1.3"
users = "0.11.0"
chrono = "0.4.19"

[[bin]]
name = "ls"
path = "src/ls/main.rs"

[[bin]]
name = "pwd"
path = "src/pwd/main.rs"

[[bin]]
name = "cat"
path = "src/cat/main.rs"

[[bin]]
name = "whoami"
path = "src/whoami/main.rs"

[[bin]]
name = "yes"
path = "src/yes/main.rs"
